2003-03-21  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/gd.trm term/gif.trm: Added #undef gdfont after it is not used
	any longer.

2003-03-20  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/eval.c (gp_exp): Make this a function in all cases.  If
 	MINEXP wasn't set, use special version that removes ERANGE caused
 	by large negative arguments to exp().

	* src/eval.h (gp_exp): Don't #define gp_exp() if no MINEXP set.

	* src/specfun.c (inverse_error_func): Call sanitized gp_exp()
 	instead of plain exp().
	(lambertw): Likewise.

2003-03-18  Ethan Merritt <merritt@u.washington.edu>

	* term/gd.trm: Default to medium size font (7x13) as claimed
	by the documentation and by the output of show term; fixes
	bug 696179. If the user provides new colors in 'set term', then
	overwrite any previously specified colors (bug 702382).


2003-03-18  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/plot2d.c (eval_plots): Initialize arrow_properties of plot
 	with vectors in case of no style options given by the user.

	* src/graphics.c (plot_vectors): Avoid using any coordinates of
 	UNDEFINED input points.

	* demo/vector.dem: Use set term push/pop to avoid screen terminal
 	dependency.
	

2003-03-17  Leo Brewin <leo.brewin@sci.monash.edu.au>

	* term/pdf.trm: Tell pdflib to use its built-in font metrics for
 	Symbol and ZapfDingbats fonts, since not all hosts have these.

2003-03-14  Petr Mikulik  <mikulik@physics.muni.cz>

	* demo/pm3d.dem: Improved demo for corners2color.

	* docs/gnuplot.doc: Proofreading pm3d section.

2003-03-13  Petr Mikulik  <mikulik@physics.muni.cz>

	* NEWS src/pm3d.h src/pm3d.c src/tables.h src/tables.c src/save.c
 	src/set.c src/show.c demo/pm3d.dem docs/gnuplot.doc: New pm3d
 	option 'corners2color'.

2003-03-13  Ethan Merritt <merritt@u.washington.edu>

	* set.c: Consolidate set_{blrt}margin into a single routine, break
 	out text_label creation and label option parsing into separate