@@ -1,3 +1,8 @@
+2003-03-21  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
+
+	* src/graph3d.c (boundary3d): Avoid division by zero if graph too
+ 	small to contain the key.
+
 2003-03-21  Petr Mikulik  <mikulik@physics.muni.cz>
 
 	* term/gd.trm term/gif.trm: Added #undef gdfont after it is not used
